--- a/src/style/tablelistid.css
+++ b/src/style/tablelistid.css
@@ -17,7 +17,7 @@
   top: 87px;
   background-color: #fcfcff;
 
-  right: 5rem;
+  /* right: 5rem; */
   display: flex;
   overflow-x: hidden;
   overflow-y: auto;
@@ -51,7 +51,7 @@
 
 @media (max-width: 1680px) {
   .table-list-sub-container {
-    top: 87px;
+    top: 0px;
   }
 }
 
