--- a/src/style/tablelistid.css
+++ b/src/style/tablelistid.css
@@ -16,7 +16,7 @@
   border-radius: 13px;
   top: 87px;
   background-color: #fcfcff;
-
+  left: 140px;
   /* right: 5rem; */
   display: flex;
   overflow-x: hidden;
@@ -51,7 +51,8 @@
 
 @media (max-width: 1680px) {
   .table-list-sub-container {
-    top: 0px;
+    top: 87px;
+    left: 140px;
   }
 }
 
@@ -61,6 +62,7 @@
 
   .billing-main {
     top: 87px;
+    left: 140px;
   }
 
   .Case-profile-addbtn {
