--- a/src/style/Companyprofile.css
+++ b/src/style/Companyprofile.css
@@ -263,9 +263,9 @@
   }
 
   .profile-route-cp{
-    top: -7.7%;
+    /* top: -7.7%;
     left: 17rem;
-    position: absolute;
+    position: absolute; */
   }
 
   .company-Topnavbar-client-profile-2 {
@@ -292,9 +292,9 @@
   }
 
   .profile-route-cp{
-    top: -2.8rem;
+    /* top: -2.8rem;
     left: 0rem;
-    position: relative;
+    position: relative; */
   }
 
   .company-Topnavbar-client-profile-2 {
