--- a/src/style/Companyprofile.css
+++ b/src/style/Companyprofile.css
@@ -171,6 +171,9 @@
   width: 84%;
   border-radius: 8px;
   padding-left: 12px;
+  display: flex;
+  align-items: center;
+  gap: 3px;
 }
 
 .company-ApplicationType {
@@ -201,17 +204,23 @@
 .company-Client-inputs {
   border: none;
   margin-left: 6px;
-  width: 146px;
   outline: none;
   background-color: transparent;
-  user-select: none;
+  word-break: break-all;
+  padding-right: 7px;
 }
 
-.company-Vector-line {
+.companyCard-left-input{
+  display: flex;
+  align-items: center;
+  gap: 7px;
+}
+
+/* .company-Vector-line {
   position: relative;
   left: 3px;
   top: 7px;
-}
+} */
 
 .company-profile-heading {
   position: relative;
