--- a/src/style/tablelistid.css
+++ b/src/style/tablelistid.css
@@ -38,15 +38,13 @@
 }
 
 .Case-profile-addbtn {
-  position: absolute;
-  left: 66%;
-  top: 72px;
   padding: 9px;
   background-color: white;
   color: black;
   border: 1px solid #e2e2e4;
   border-radius: 8px;
   cursor: pointer;
+  margin-right: 8px;
 }
 
 @media (max-width: 1680px) {
