--- a/src/style/Sidenavbar.css
+++ b/src/style/Sidenavbar.css
@@ -65,8 +65,8 @@
 
   .icon-badge{
   position: absolute;
-  left: 3.2rem;
-  top: 3.8rem;
+  left: 2.2rem;
+  top: -0.5rem;
   width: 1.4rem;
   height: 1.4rem;
   border-radius: 50%;
@@ -79,8 +79,8 @@
 
   .icon-badge-message{
   position: absolute;
-  left: 3.8rem;
-  top: 9.2rem;
+  left: 2rem;
+  top: 0;
   width: .75rem;
   height: .75rem;
   border-radius: 50%;
